fixing navbar on mobile

--- a/styles/body_style.css
+++ b/styles/body_style.css
@@ -5,8 +5,7 @@ p {
 
 body
 {
-    width: 100%;
-    height: 100%;
+
 
     padding-top: 70px;
     overflow-x: hidden;
